sample/retrieveUnpackaged/objects/Manual_Check__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Manual customer verification checks</description>
    <fields>
        <fullName>Check_Type__c</fullName>
        <inlineHelpText>Must be one of the following values:
0 - Alert
1 - Warning
2 - Informational
3 - Not Checked</inlineHelpText>
        <label>Check Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message1__c</fullName>
        <label>Message1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message2__c</fullName>
        <label>Message2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Message3__c</fullName>
        <label>Message3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Cust Verification - Manual Check</label>
</CustomObject>